# modprop

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
include/modprop/: ModpropTypes.h
include/modprop/compo/: BasicModules.h  ExponentialModule.h  MathModules.h  ModulesCore.h  OuterProductModule.h  ReshapeModule.h  ScalingModules.h  XTCXModule.h  core.hpp
include/modprop/kalman/: KalmanModule.h  PredictModule.h  UpdateModule.h  kalman.hpp
include/modprop/optim/: GaussianLikelihoodModule.h  GaussianLogLikelihood.h  MeanModule.h  optim.hpp
include/modprop/utils/: DerivativeTester.h  MatrixUtils.hpp
python/modprop/: __init__.py
python/modprop/core/: backprop.py  construction.py  modules_core.py
python/modprop/modules/: basic_modules.py  cost_modules.py  kalman_modules.py  math_modules.py  reduce_modules.py  reshape_modules.py
src/: BasicModules.cpp  DerivativeTester.cpp  ExponentialModule.cpp  GaussianLikelihoodModule.cpp  GaussianLogLikelihood.cpp  KalmanModule.cpp  MathModules.cpp  MeanModule.cpp  ModulesCore.cpp  OuterProductModule.cpp  PredictModule.cpp  ReshapeModule.cpp  ScalingModules.cpp  UpdateModule.cpp  XTCXModule.cpp
tests/: KalmanTest.cpp  context.py  test_backprop_kf.py  test_jacobians.py  test_weighted_sum.py  utils.py
